src/aux-server/aux-web/aux-projector/FileTable/FileTable.css
:root {
    --disabled-cell-color: #F2F2F2;
    --file-cell-border-color: #CCC;
    --file-cell-border: 1px solid var(--file-cell-border-color);
}

.file-table-grid {
    display: inline-grid;
    grid-gap: 1px;
    background-color: var(--file-cell-border-color);
    border: var(--file-cell-border);
}

.file-table-grid.columns {
    grid-auto-flow: column;
    grid-auto-columns: fit-content(250px);
}

.file-table-grid.rows {
    grid-auto-flow: row;
}

.file-table {
    border-collapse: collapse;
    border-spacing: 0;
}

.file-table .new-tag-button {
    margin: 0;
    text-transform: none;
}

.file-cell.header {
    background-color: var(--disabled-cell-color);
    padding: 4px;
    /* border-top: var(--file-cell-border); */
}

.file-cell.id {
    font-weight: 700;
    overflow-x: hidden;
    white-space: nowrap;
}

.file-cell.remove-item {
    text-align: center;
    background-color: var(--disabled-cell-color);
}

.file-cell.remove-item .md-button {
    margin: 0;
}

.file-cell input {
    width: 100%;
    height: 100%;
    padding: 2px;
    border: none;
}

.remove-tag.md-button {
    width: 24px;
    min-width: 24px;
    height: 24px;
    margin: 0;
}

.remove-tag .md-icon {
    font-size: 16px !important;
}

.remove-tag .md-icon:hover {
    cursor: pointer;
}

.add-button-cell {
    display: none;
}

.has-add-button .add-button-cell {
    display: table-cell;
}

th:last-child {
    border-right: 1px solid rgba(0,0,0,.2);
}

.has-add-button th:last-child {
    border-right: none;
    border-top: none;
    background-color: #fff;
}

.file-table .top-part {
    margin-bottom: 16px;
}

.file-table-actions {
    text-align: right;
}

.file-table-actions .new-tag-button {
    text-transform: none;
}

.file-table-actions .finish-tag-button {
    text-transform: none;
    margin: 0;
}

.finish-tag-button-wrapper {
    display: inline-block;
}

.file-table-actions .tag-editor .md-field {
    margin: 0;
    padding-top: 0;
    min-height: 32px;
}

.file-table-actions .md-button .md-icon.done {
    color: #13bd13b4;
}

.file-table-actions .file-table-form {
    height: 100%;
    display: flex;
    flex: 1;
    flex-direction: row-reverse;
    align-items: center;
}

.file-table-wrapper {
    width: 100%;
    max-height: 354px;
    overflow: auto;
}

.multi-line-tag-value-editor {
    width: 100%;
    max-height: 400px;
}

.multi-line-tag-value-editor.formula {
    font-family: Consolas, "Courier New", monospace;
    letter-spacing: 0;
}

.multi-line-tag-value-wrapper {
    padding: 5px;
}

.multi-line-tag-value-wrapper > .md-field {
    margin-bottom: 0;
}

.no-search-results-message {
    text-align: center;
}

.search-field {
    margin-top: 0;
    margin-left: 8px;
}

.search-results-wrapper {
    padding: 0 8px;
}

